# dmm-api-py

./: .env  .flake8  .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  setup.py
examples/: floor_list.py
src/dmm_api/: __init__.py  client.py  common.py  crawler.py
tests/: test_client.py  test_init.py
