[tool.poetry]
name = "dmm-api"
version = "0.1.2"
description = "DMM API Client for Python"
authors = ["Takeru Saito <takelushi@gmail.com>"]
maintainers = ["Takeru Saito <takelushi@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/takelushi/dmm-api-py"
documentation = ""
keywords = [
   "API"
]
classifiers = [
   "Development Status :: 3 - Alpha",
   "License :: OSI Approved :: MIT License",
   "Programming Language :: Python :: 3.6",
   "Topic :: Software Development :: Libraries"
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
cohesion = "^1.0.0"
flake8-blind-except = "^0.1.1"
flake8-bugbear = "^20.1.4"
flake8-class-newline = "^1.6.0"
flake8-commas = "^2.0.0"
flake8-builtins = "^1.5.3"
flake8-coding = "^1.3.2"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"
flake8-quotes = "^3.2.0"
flake8-comprehensions = "^3.3.0"
flake8-eradicate = "^1.0.0"
flake8-pytest-style = "^1.3.0"
pep8-naming = "^0.11.1"
mypy = "^0.790"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/takelushi/dmm-api-py/issues"
