[tool.poetry]
name = "dmm-api"
version = "0.1.4"
description = "DMM API Client for Python"
authors = ["Takeru Saito <takelushi@gmail.com>"]
maintainers = ["Takeru Saito <takelushi@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/takelushi/dmm-api-py"
repository = "https://github.com/takelushi/dmm-api-py"


[tool.poetry.dependencies]
python = "^3.7"
requests = "2.23.0"

[tool.poetry.dev-dependencies]
cohesion = "^1.0.0"
darglint = "^1.6.0"
flake8 = "^3.8.4"
flake8-2020 = "^1.6.0"
flake8-absolute-import = "^1.0"
flake8-blind-except = "^0.2.0"
flake8-breakpoint = "^1.1.0"
flake8-bugbear = "^20.11.1"
flake8-builtins = "^1.5.3"
flake8-class-newline = "^1.6.0"
flake8-coding = "^1.3.2"
flake8-cognitive-complexity = "^0.1.0"
flake8-commas = "^2.0.0"
flake8-comprehensions = "^3.3.1"
flake8-debugger = "^4.0.0"
flake8-docstrings = "^1.5.0"
flake8-eradicate = "^1.0.0"
flake8-expression-complexity = "^0.0.9"
flake8-fixme = "^1.1.1"
flake8-functions = "^0.0.5"
flake8-html = "^0.4.1"
flake8-import-order = "^0.18.1"
flake8-logging-format = "^0.6.0"
flake8-multiline-containers = "^0.0.17"
flake8-mutable = "^1.2.0"
flake8-pep3101 = "^1.3.0"
flake8-pie = "^0.6.1"
flake8-print = "^4.0.0"
flake8-printf-formatting = "^1.1.2"
flake8-pyi = "^20.10.0"
flake8-pytest-style = "^1.3.0"
flake8-quotes = "^3.2.0"
flake8-return = "^1.1.2"
flake8-simplify = "^0.13.0"
flake8-string-format = "^0.3.0"
isort = "^5.7.0"
lxml = "^4.6.2"
mypy = "0.790"
pep8-naming = "^0.11.1"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-html = "^3.1.1"
yapf = "^0.30.0"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/takelushi/dmm-api-py/issues"

[tool.isort]
profile = "google"
line_length = "79"
force_single_line = false
known_first_party = ["dmm_api"]

[tool.pytest.ini_options]
minversion = "6.2"
addopts = "--cov=src/ --cov-report term-missing"
testpaths = [
    "tests"
]
